--- a/APPVIEW/Views/Account/ForgotPassword.cshtml
+++ b/APPVIEW/Views/Account/ForgotPassword.cshtml
@@ -1,5 +1,4 @@
-﻿@model APPVIEW.ViewModels.RegisterVm
-
+﻿@model APPVIEW.ViewModels.ResetPass
 @{
     Layout = null;
 }
@@ -11,7 +10,7 @@
   class="light-style layout-wide customizer-hide"
   dir="ltr"
   data-theme="theme-default"
-  data-assets-path="../contentadmin/assets/"
+  data-assets-path="~/contentadmin/assets/"
   data-template="vertical-menu-template-free">
   <head>
     <meta charset="utf-8" />
@@ -19,12 +18,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
 
-    <title>Register </title>
+    <title>Forgot Password</title>
 
     <meta name="description" content="" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon"href="~/contentadmin/assets/img/favicon/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="~/contentadmin/assets/img/favicon/favicon.ico" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -33,22 +32,22 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&ampdisplay=swap"
       rel="stylesheet" />
 
-    <link rel="stylesheet"href="~/contentadmin/assets/vendor/fonts/materialdesignicons.css" />
+    <link rel="stylesheet" href="~/contentadmin/assets/vendor/fonts/materialdesignicons.css" />
 
     <!-- Menu waves for no-customizer fix -->
-    <link rel="stylesheet"href="~/contentadmin/assets/vendor/libs/node-waves/node-waves.css" />
+    <link rel="stylesheet" href="~/contentadmin/assets/vendor/libs/node-waves/node-waves.css" />
 
     <!-- Core CSS -->
-    <link rel="stylesheet"href="~/contentadmin/assets/vendor/css/core.css" class="template-customizer-core-css" />
-    <link rel="stylesheet"href="~/contentadmin/assets/vendor/css/theme-default.css" class="template-customizer-theme-css" />
-    <link rel="stylesheet"href="~/contentadmin/assets/css/demo.css" />
+    <link rel="stylesheet" href="~/contentadmin/assets/vendor/css/core.css" class="template-customizer-core-css" />
+    <link rel="stylesheet" href="~/contentadmin/assets/vendor/css/theme-default.css" class="template-customizer-theme-css" />
+    <link rel="stylesheet" href="~/contentadmin/assets/css/demo.css" />
 
     <!-- Vendors CSS -->
-    <link rel="stylesheet"href="~/contentadmin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
+    <link rel="stylesheet" href="~/contentadmin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
 
     <!-- Page CSS -->
     <!-- Page -->
-    <link rel="stylesheet"href="~/contentadmin/assets/vendor/css/pages/page-auth.css" />
+    <link rel="stylesheet" href="~/contentadmin/assets/vendor/css/pages/page-auth.css" />
 
     <!-- Helpers -->
     <script src="~/contentadmin/assets/vendor/js/helpers.js"></script>
@@ -63,13 +62,13 @@
     <div class="position-relative">
       <div class="authentication-wrapper authentication-basic container-p-y">
         <div class="authentication-inner py-4">
-          <!-- Register Card -->
+          <!-- Logo -->
           <div class="card p-2">
-            <!-- Logo -->
+            <!-- Forgot Password -->
             <div class="app-brand justify-content-center mt-5">
               <a href="index.html" class="app-brand-link gap-2">
                 <span class="app-brand-logo demo">
-                  <span style="color: var(--bs-primary)">
+                  <span style="color: #9055fd">
                     <svg width="30" height="24" viewBox="0 0 250 196" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path
                         fill-rule="evenodd"
@@ -130,67 +129,41 @@
                     </svg>
                   </span>
                 </span>
-                <span class="app-brand-text demo text-heading fw-semibold">Supper Fashion</span>
+                <span class="app-brand-text demo text-heading fw-semibold">Supper fashion</span>
               </a>
             </div>
             <!-- /Logo -->
             <div class="card-body mt-2">
-              <h4 class="mb-2">Adventure starts here 🚀</h4>
+              <h4 class="mb-2">Forgot Password? 🔒</h4>
+              <p class="mb-4">Enter your email and we'll send you instructions to reset your password</p>
                         @if (!string.IsNullOrEmpty(ViewData["ErrorMessage"] as string))
                         {
                             <div class="alert alert-warning alert-dismissible" role="alert">
                                 @ViewData["ErrorMessage"]
+                               
+                            </div>
+
+                        }
+                        else if (!string.IsNullOrEmpty(ViewData["Sucsess"] as string))
+                        {
+                            <div class="alert alert-success" role="alert">
+                                @ViewData["Sucsess"]
+
                             </div>
                         }
-              <p class="mb-4">Reghiter</p>
-             
-                <form asp-action="Register" id="formAuthentication" class="mb-3" method="POST">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                            <div class="form-floating form-floating-outline mb-3">
-                                <input asp-for="Name" type="text" class="form-control" id="name" name="Name" placeholder="Enter your email" />
-                                <label for="name">Name</label>
-                            </div>
+                       
+                        <form   asp-action="ForgotPassword"  class="mb-3" method="POST">
                 <div class="form-floating form-floating-outline mb-3">
-                  <input asp-for="Email" type="text" class="form-control" id="email" name="email" placeholder="Enter your email" />
-                  <label for="email">Email</label>
-                </div>                
-                <div class="form-floating form-floating-outline mb-3">
-                  <input asp-for="PhoneNumber" type="text" class="form-control" id="phone" name="phonenumber" placeholder="Enter your PhoneNumber" />
-                  <label for="phone">Phone Number</label>
+                  <input 
+                    type="text"
+                    class="form-control"
+                    id="email"
+                    asp-for="Email"
+                    placeholder="Enter your email"
+                    autofocus />
+                  <label>Email</label>
                 </div>
-                <div class="mb-3 form-password-toggle">
-                  <div class="input-group input-group-merge">
-                    <div class="form-floating form-floating-outline">
-                      <input asp-for="Password"
-                        type="password"
-                        id="password"
-                        class="form-control"
-                        name="password"
-                        placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
-                        aria-describedby="password" />
-                      <label for="password">Password</label>
-                    </div>
-                    <span class="input-group-text cursor-pointer"><i class="mdi mdi-eye-off-outline"></i></span>
-                  </div>
-                </div>
-                <div class="mb-3 form-password-toggle">
-                  <div class="input-group input-group-merge">
-                    <div class="form-floating form-floating-outline">
-                      <input asp-for="ConfirmPassword"
-                        type="password"
-                        id="confirmpassword"
-                        class="form-control"
-                        name="ConfirmPassword"
-                        placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
-                        aria-describedby="password" />
-                      <label for="password">ConfirmPassword</label>
-                    </div>
-                    <span class="input-group-text cursor-pointer"><i class="mdi mdi-eye-off-outline"></i></span>
-                  </div>
-                </div>
-                            <div class="mb-3">
-                                <button class="btn btn-primary d-grid w-100" type="submit">Sign in</button>
-                            </div>
+                <button class="btn btn-primary d-grid w-100">Send Reset Code</button>
               </form>
                         <div class="text-center">
                             <a href="#" class="d-flex align-items-center justify-content-center" onclick="goBack()">
@@ -203,15 +176,9 @@
                                 }
                             </script>
                         </div>
-              <p class="text-center">
-                <span>Already have an account?</span>
-                <a href="~/Account/Login">
-                  <span>Sign in instead</span>
-                </a>
-              </p>
             </div>
           </div>
-          <!-- Register Card -->
+          <!-- /Forgot Password -->
           <img
             src="~/contentadmin/assets/img/illustrations/tree-3.png"
             alt="auth-tree"
@@ -233,8 +200,8 @@
     <!-- / Content -->
 
     <!-- Core JS -->
-    <!-- build:js contentadmin/assets/vendor/js/core.js -->
-    <script src="~/contentadmin/assets/vendor/libs/jquery/jquery.js"></script>  
+    <!-- build:js assets/vendor/js/core.js -->
+    <script src="~/contentadmin/assets/vendor/libs/jquery/jquery.js"></script>
     <script src="~/contentadmin/assets/vendor/libs/popper/popper.js"></script>
     <script src="~/contentadmin/assets/vendor/js/bootstrap.js"></script>
     <script src="~/contentadmin/assets/vendor/libs/node-waves/node-waves.js"></script>
@@ -254,3 +221,4 @@
     <script async defer src="https://buttons.github.io/buttons.js"></script>
   </body>
 </html>
+
