--- a/APPVIEW/Views/Home/Index.cshtml
+++ b/APPVIEW/Views/Home/Index.cshtml
@@ -61,10 +61,10 @@
                         <div class="card-product__img">
                             <img class="card-img" src="~/contentwebb/img/product/product1.png" alt="">
                             <ul class="card-product__imgOverlay">
-                                <li><button><i class="ti-search"></i></button></li>
-                                <li><button><i class="ti-shopping-cart"></i></button></li>
+                                <li><a href="@Url.ActionLink("details","home",new{id=item.Id})"><button><i class="ti-search"></i></button></a></li>
+                                <li><a href="@Url.ActionLink("Addtocart","cart",new{id=item.Id,Soluong=1})"><button><i class="ti-shopping-cart"></i></button></a></li>
                                 <li><button><i class="ti-heart"></i></button></li>
-                                <li><button> @Html.ActionLink("Mua hàng", "ViewBill", new { id=item.Id }, new { style = "color:black;" })</button></li>
+                                <li><button> @Html.ActionLink("Mua hàng", "ViewBill", new { id=item.Id_Product }, new { style = "color:black;" })</button></li>
                             </ul>
                         </div>
                         <div class="card-body">
