--- a/APPVIEW/Views/Voucher/GetList.cshtml
+++ b/APPVIEW/Views/Voucher/GetList.cshtml
@@ -10,6 +10,9 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<form asp-action="Search" method="get" class="form-inline">
+    <input placeholder="Voucher Search" type="text" name="searchTerm" id="searchTerm" /><button>Tìm</button>
+</form>
 <table class="table">
     <thead>
         <tr>
@@ -68,6 +71,7 @@
                 @Html.DisplayFor(modelItem => item.ReduceForm)
             </td>
             <td>
+                @*@{string status = item.Status >= 1 ? "Còn HSD" : "Hết HSD";}*@
                 @Html.DisplayFor(modelItem => item.Status)
             </td>
             <td>
