--- a/APPVIEW/Views/Home/Shop.cshtml
+++ b/APPVIEW/Views/Home/Shop.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Shop";
     Layout = "~/Views/Shared/_LayoutWeb.cshtml";
 }
@@ -25,103 +24,45 @@
     <div class="container">
         <div class="row">
             <div class="col-xl-3 col-lg-4 col-md-5">
-                <div class="sidebar-categories">
-                    <div class="head">Browse Categories</div>
-                    <ul class="main-categories">
-                        <li class="common-filter">
-                            <form action="#">
-                                <ul>
-                                    <li class="filter-list"><input class="pixel-radio" type="radio" id="men" name="brand"><label for="men">Men<span> (3600)</span></label></li>
-                                    <li class="filter-list"><input class="pixel-radio" type="radio" id="women" name="brand"><label for="women">Women<span> (3600)</span></label></li>
-                                    <li class="filter-list"><input class="pixel-radio" type="radio" id="accessories" name="brand"><label for="accessories">Accessories<span> (3600)</span></label></li>
-                                    <li class="filter-list"><input class="pixel-radio" type="radio" id="footwear" name="brand"><label for="footwear">Footwear<span> (3600)</span></label></li>
-                                    <li class="filter-list"><input class="pixel-radio" type="radio" id="bayItem" name="brand"><label for="bayItem">Bay item<span> (3600)</span></label></li>
-                                    <li class="filter-list"><input class="pixel-radio" type="radio" id="electronics" name="brand"><label for="electronics">Electronics<span> (3600)</span></label></li>
-                                    <li class="filter-list"><input class="pixel-radio" type="radio" id="food" name="brand"><label for="food">Food<span> (3600)</span></label></li>
-                                </ul>
-                            </form>
-                        </li>
-                    </ul>
-                </div>
                 <div class="sidebar-filter">
                     <div class="top-filter-head">Product Filters</div>
                     <div class="common-filter">
-                        <div class="head">Brands</div>
-                        <form action="#">
+                        <div class="head">Sizes</div>
+                        <form action="#" id="size-filter">
                             <ul>
-                                <li class="filter-list"><input class="pixel-radio" type="radio" id="apple" name="brand"><label for="apple">Apple<span>(29)</span></label></li>
-                                <li class="filter-list"><input class="pixel-radio" type="radio" id="asus" name="brand"><label for="asus">Asus<span>(29)</span></label></li>
-                                <li class="filter-list"><input class="pixel-radio" type="radio" id="gionee" name="brand"><label for="gionee">Gionee<span>(19)</span></label></li>
-                                <li class="filter-list"><input class="pixel-radio" type="radio" id="micromax" name="brand"><label for="micromax">Micromax<span>(19)</span></label></li>
-                                <li class="filter-list"><input class="pixel-radio" type="radio" id="samsung" name="brand"><label for="samsung">Samsung<span>(19)</span></label></li>
+                                <li class="filter-list"><input id="size-all" val="all" class="pixel-radio" type="radio" name="size" checked>All Size</li>
+                                <li class="filter-list"><input id="size-1" val="S" class="pixel-radio" type="radio" name="size">S</li>
+                                <li class="filter-list"><input id="size-2" val="XL" class="pixel-radio" type="radio" name="size">XL</li>
+                                <li class="filter-list"><input id="size-3" val="XXL" class="pixel-radio" type="radio" name="size">XXl</li>
                             </ul>
                         </form>
                     </div>
                     <div class="common-filter">
-                        <div class="head">Color</div>
-                        <form action="#">
+                        <div class="head">Colors</div>
+                        <form action="#" id="color-filter">
                             <ul>
-                                <li class="filter-list"><input class="pixel-radio" type="radio" id="black" name="color"><label for="black">Black<span>(29)</span></label></li>
-                                <li class="filter-list">
-                                    <input class="pixel-radio" type="radio" id="balckleather" name="color"><label for="balckleather">
-                                        Black
-                                        Leather<span>(29)</span>
-                                    </label>
-                                </li>
-                                <li class="filter-list">
-                                    <input class="pixel-radio" type="radio" id="blackred" name="color"><label for="blackred">
-                                        Black
-                                        with red<span>(19)</span>
-                                    </label>
-                                </li>
-                                <li class="filter-list"><input class="pixel-radio" type="radio" id="gold" name="color"><label for="gold">Gold<span>(19)</span></label></li>
-                                <li class="filter-list"><input class="pixel-radio" type="radio" id="spacegrey" name="color"><label for="spacegrey">Spacegrey<span>(19)</span></label></li>
+                                <li class="filter-list"><input id="color-all" val="all" class="pixel-radio" type="radio" name="color" checked>All Color</li>
+                                <li class="filter-list"><input id="color-1" val="Black" class="pixel-radio" type="radio" name="color">Black</li>
+                                <li class="filter-list"><input id="color-2" val="Red" class="pixel-radio" type="radio" name="color">Red</li>
+                                <li class="filter-list"><input id="color-3" val="Blue" class="pixel-radio" type="radio" name="color">Blue</li>
                             </ul>
                         </form>
                     </div>
                     <div class="common-filter">
                         <div class="head">Price</div>
-                        <div class="price-range-area">
-                            <div id="price-range"></div>
-                            <div class="value-wrapper d-flex">
-                                <div class="price">Price:</div>
-                                <span>$</span>
-                                <div id="lower-value"></div>
-                                <div class="to">to</div>
-                                <span>$</span>
-                                <div id="upper-value"></div>
-                            </div>
-                        </div>
+                        <form action="#" id="price-filter">
+                            <ul>
+                                <li class="filter-list"><input id="price-all" val="all" class="pixel-radio" type="radio" name="price" checked>All Price</li>
+                                <li class="filter-list"><input id="price-1" val="0-100" class="pixel-radio" type="radio" name="price">$0 - $100</li>
+                                <li class="filter-list"><input id="price-2" val="100-200" class="pixel-radio" type="radio" name="price">$100 - $200</li>
+                                <li class="filter-list"><input id="price-3" val="200-300" class="pixel-radio" type="radio" name="price">$200 - $300</li>
+                            </ul>
+                        </form>
                     </div>
+                    <button id="btnFilter" style="margin: 10px 100px">Filter</button>
                 </div>
             </div>
             <div class="col-xl-9 col-lg-8 col-md-7">
-                <!-- Start Filter Bar -->
-                <div class="filter-bar d-flex flex-wrap align-items-center">
-                    <div class="sorting">
-                        <select>
-                            <option value="1">Default sorting</option>
-                            <option value="1">Default sorting</option>
-                            <option value="1">Default sorting</option>
-                        </select>
-                    </div>
-                    <div class="sorting mr-auto">
-                        <select>
-                            <option value="1">Show 12</option>
-                            <option value="1">Show 12</option>
-                            <option value="1">Show 12</option>
-                        </select>
-                    </div>
-                    <div>
-                        <div class="input-group filter-bar-search">
-                            <input type="text" placeholder="Search">
-                            <div class="input-group-append">
-                                <button type="button"><i class="ti-search"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- End Filter Bar -->
                 <!-- Start Best Seller -->
                 <section class="lattest-product-area pb-40 category-list">
                     <div class="row">
@@ -400,4 +341,46 @@
         </div>
     </div>
 </section>
-<!-- ================ top product area end ================= -->		
+<!-- ================ top product area end ================= -->
+<script>
+        document.getElementById("btnFilter").addEventListener("click", function(){
+            var priceRange = getSelectedRadio("price-filter");
+            var colors = getSelectedRadio("color-filter");
+            var sizes = getSelectedRadio("size-filter");
+            var data = {
+                Sizes: sizes,
+                Colors: colors,
+                PriceRange: priceRange
+            };
+            fetch("/ProductDetail/GetFiltered", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify(data)
+            }).then(function(response){
+                if(response.ok){
+                    return response.text();
+                } else {
+                    throw new Error("Error sending data to the controller");
+                }
+            }).then(function(result){
+                // Handle the result from the server if needed
+                console.log(result);
+            }).catch(function(error){
+
+    console.log("Error", error);
+            });
+        });
+
+
+            });
+
+    function getSelectedRadio(formId){
+            var radio = $('#' + formId + ' input[type="radio"]:checked');
+            var values = radio.map(function(){
+                return $(this).attr('val');
+            }).get();
+            return values;
+        }
+</script>
